[package]
name = "final-whistle"
version = "0.1.0"
description = "Trustless settlement engine for World Cup prediction markets, powered by TxLINE"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "final_whistle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "1.1.2", features = ["init-if-needed"] }

# TODO: once you have TxLINE's published crate for the Txoracle program (if they
# ship one) add it here and replace the manual CPI construction in
# src/txoracle_cpi.rs with their generated `cpi::validate_stat_v2(...)` call.
